# gtk-sharp

./: configure.ac
gdk/: Makefile.am
gtk/: Makefile.am
gtkdotnet/: Makefile.am
pango/: Makefile.am
sample/: Makefile.am
sample/GtkDemo/: Makefile.am
sample/test/: Makefile.am
